[gd_scene load_steps=10 format=3 uid="uid://d4kukl2esgxwp"]

[ext_resource type="Texture2D" uid="uid://cv86oqgilefmn" path="res://assets/button/confirm_button/confirm_button.png" id="1_0bhau"]
[ext_resource type="Script" uid="uid://cc0lawlrgjo1q" path="res://Model/buy_confirmation.gd" id="1_vv2ij"]
[ext_resource type="FontFile" uid="uid://cpy65047eb1jb" path="res://font/Minecraftia-Regular.ttf" id="2_i5yxb"]
[ext_resource type="Texture2D" uid="uid://cbc0xkgrmfh00" path="res://assets/background/popup_background.png" id="2_qft0i"]
[ext_resource type="Texture2D" uid="uid://cqofxxs78y4fr" path="res://assets/button/confirm_button/confirm_button_click.png" id="2_vv2ij"]
[ext_resource type="Texture2D" uid="uid://cmwb41p7n6uex" path="res://assets/button/confirm_button/confirm_button_hover.png" id="3_4pj0v"]
[ext_resource type="Texture2D" uid="uid://6jutd8xsqsmp" path="res://assets/button/exit_button/exit_button.png" id="4_b7ln2"]
[ext_resource type="Texture2D" uid="uid://cmx74ox4lapx2" path="res://assets/button/exit_button/exit_button_click.png" id="5_4r87u"]
[ext_resource type="Texture2D" uid="uid://bwy2pfjstwykm" path="res://assets/button/exit_button/exit_button_hover.png" id="6_r20lg"]

[node name="BuyConfirmation" type="CanvasLayer"]
script = ExtResource("1_vv2ij")

[node name="AntiClick" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -345.95374
offset_top = -230.625
offset_right = 345.95374
offset_bottom = 230.625
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qft0i")

[node name="message" type="RichTextLabel" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -265.0
offset_top = -151.0
offset_right = 268.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_i5yxb")
bbcode_enabled = true
text = "[center][font_size=38]Voulez vous vraiment acheter le batiment : 64cdh%03eh$ ?"
fit_content = true
scroll_active = false

[node name="confirm_button" type="TextureButton" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -243.0
offset_top = 61.0
offset_right = -153.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_0bhau")
texture_pressed = ExtResource("2_vv2ij")
texture_hover = ExtResource("3_4pj0v")
stretch_mode = 0

[node name="cancel_button" type="TextureButton" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 152.0
offset_top = 56.0
offset_right = 242.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_b7ln2")
texture_pressed = ExtResource("5_4r87u")
texture_hover = ExtResource("6_r20lg")
stretch_mode = 0

[connection signal="pressed" from="Background/confirm_button" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="Background/cancel_button" to="." method="_on_cancel_button_pressed"]
